--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "url": "https://github.com/yankouskia/additional_4/issues"
   },
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "big-integer": "^1.6.25"
   },
   "homepage": "https://github.com/yankouskia/additional_4#readme"
 }
